--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.80.1",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-localize": "^3.5.1",
     "react-native-mmkv": "^3.3.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
