--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "^4.13.1",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
