--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "i18next": "^25.3.2",
