--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-localize": "^3.5.1",
     "react-native-mmkv": "^3.3.0",
+    "react-native-pager-view": "^6.8.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-swipe-cards": "^0.1.1",
+    "react-native-tab-view": "^4.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
